Fixed white space
Fixed white space in display components table

--- a/src/app/display/display.component.css
+++ b/src/app/display/display.component.css
@@ -16,6 +16,7 @@ td{
   padding: 8px;
   align-content: center;
   text-align: left;
+  white-space: nowrap;
 }
 
 th{
